update shreds package

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "shreds": "^0.2.3",
+    "shreds": "0.3.0",
     "viem": "^2.45.1",
     "ws": "^8.19.0"
   },
